mobilerobotics_ws/log/build_2023-12-01_17-57-09/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/better_soccer.py", line 258
    for stop range(len(self.path) - 1):
             ^
SyntaxError: invalid syntax

